--- a/lab/review-cr2/roles/haproxy/tasks/main.yml
+++ b/lab/review-cr2/roles/haproxy/tasks/main.yml
@@ -19,5 +19,6 @@
     template:
       src: haproxy.cfg.j2
       dest: /etc/haproxy/haproxy.cfg
+      #validate: haproxy -f %s -c -q
     notify: reload haproxy
   become: true
